<resources>
    <string name="app_name">FirebaseKotlinExample</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="registration_screen">Registration screen</string>
    <string name="login_screen">Login screen</string>
    <string name="have_account">Don\'t have account?</string>
    <string name="facebook_app_id">354403562044197</string>
    <string name="fb_login_protocol_scheme">fb354403562044197</string>

</resources>
