<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginActivity">

    <TextView
        android:id="@+id/registrationScreen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_screen"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/layout_username"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/layout_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_150dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edit_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:maxLines="1"
            android:textColor="@color/lightTextColor"
            android:textColorHint="@color/lightTextColor"
            android:textStyle="normal" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/layout_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_username">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edit_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="normal"
            android:hint="@string/password"
            android:textColorHint="@color/lightTextColor"
            android:textColor="@color/lightTextColor"
            android:inputType="textPassword"
            android:maxLines="1" />
    </android.support.design.widget.TextInputLayout>

    <FrameLayout
        android:id="@+id/button_login_frame"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="@dimen/margin_30dp"
        app:layout_constraintLeft_toLeftOf="@id/layout_password"
        app:layout_constraintRight_toRightOf="@id/layout_password"
        app:layout_constraintTop_toBottomOf="@id/layout_password">

        <Button
            android:id="@+id/button_login"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_button_submit"
            android:textStyle="bold"
            android:elevation="@dimen/elevation_15dp"
            android:text="@string/login"
            android:textAllCaps="false"
            android:onClick="switchToMainActivity"
            android:textColor="@android:color/white"/>
    </FrameLayout>

    <com.facebook.login.widget.LoginButton
        android:id="@+id/facebook_login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        app:layout_constraintTop_toBottomOf="@id/button_login_frame"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:onClick="onFacebookLogin"/>

    <TextView
        android:id="@+id/text_have_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size_14sp"
        android:textColor="@color/shadowTextColor"
        android:text="@string/have_account"
        app:layout_constraintHorizontal_bias="0.3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_login_frame"/>

    <TextView
        android:id="@+id/text_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textColor="@color/mainAppColorLight"
        android:textSize="@dimen/text_size_14sp"
        android:onClick="switchToRegisterActivity"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginLeft="@dimen/margin_5dp"
        app:layout_constraintLeft_toRightOf="@id/text_have_account"
        app:layout_constraintTop_toBottomOf="@id/button_login_frame"/>
</android.support.constraint.ConstraintLayout>