<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.registration.RegistrationActivity">

    <TextView
        android:id="@+id/registrationScreen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registration_screen"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/layout_mail"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/layout_mail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_150dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edit_user_mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:maxLines="1"
            android:textColor="@color/lightTextColor"
            android:textColorHint="@color/lightTextColor"
            android:textStyle="normal"
            android:text="test@gmail.com"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/layout_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_mail">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edit_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="normal"
            android:hint="@string/name"
            android:textColorHint="@color/lightTextColor"
            android:textColor="@color/lightTextColor"
            android:maxLines="1"
            android:text="test1"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/layout_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_name">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edit_user_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="normal"
            android:hint="@string/password"
            android:textColorHint="@color/lightTextColor"
            android:textColor="@color/lightTextColor"
            android:inputType="textPassword"
            android:maxLines="1"
            android:text="1111"/>
    </android.support.design.widget.TextInputLayout>

    <FrameLayout
        android:id="@+id/button_login_frame"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="@dimen/margin_30dp"
        app:layout_constraintLeft_toLeftOf="@id/layout_password"
        app:layout_constraintRight_toRightOf="@id/layout_password"
        app:layout_constraintTop_toBottomOf="@id/layout_password">

        <Button
            android:id="@+id/button_login"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_button_submit"
            android:textStyle="bold"
            android:elevation="@dimen/elevation_15dp"
            android:text="@string/register"
            android:textAllCaps="false"
            android:onClick="onRegister"
            android:textColor="@android:color/white"/>
    </FrameLayout>
</android.support.constraint.ConstraintLayout>